--- a/app/views/shops/index.html.haml
+++ b/app/views/shops/index.html.haml
@@ -1,13 +1,22 @@
 .header
-  .header__inner
-    .header__inner__upper
-      .header__inner__upper__title
-      .header__inner__upper__nav
-        .header__inner__upper__nav__left
-        .header__inner__upper__nav__right
-    .header__inner__lower
-      .header__inner__lower__search-form
-
+  .header
+    .header__upper
+      .header__upper__title
+        = link_to Cafelog 
+      .header__upper__nav
+        .header__upper__nav__left
+          = link_to "カテゴリ"
+        .header__upper__nav__right
+          %ul
+            %li
+              = link_to "ログイン"
+            %li 
+              = link_to "新規登録"
+    .header__lower
+      %form.search-form(action="")
+        %input#sbox(type="text")/
+        %input#sbtn(type="submit")/
+          
 .main
   .main__img
     .main__img__msg
