Set gem font-awesome-sass

--- a/app/views/shops/index.html.haml
+++ b/app/views/shops/index.html.haml
@@ -13,7 +13,7 @@
             %li 
               = link_to "新規登録"
     .header__lower
-      %form.search-form(action="")
+      %form.search-form(action="/")
         %input#sbox(type="text")/
         %input#sbtn(type="submit")/
           
