--- a/app/views/shops/index.html.haml
+++ b/app/views/shops/index.html.haml
@@ -22,7 +22,4 @@
       .app-banner__inner__btn
         = link_to "新規登録", root_path, class: "btn login_btn"
 
-
-.footer
-  .footer__inner
-  .footer__logo
+= render 'footer'
