Add validation for shop.rb

--- a/app/views/shops/index.html.haml
+++ b/app/views/shops/index.html.haml
@@ -6,7 +6,9 @@
   .main__img
     .main__img__msg
       .main__img__msg__ttl
-        カフェ選びならCafelog
+        あなたのカフェ選びなら
+        %br/
+        Cafelog
       .main__img__msg__txt
         休憩・勉強・仕事・女子会
         %br
