--- a/app/assets/stylesheets/shops.scss
+++ b/app/assets/stylesheets/shops.scss
@@ -38,40 +38,40 @@
       }
     }
   }
-  &__search {
-    height: 60px;
-    width: 100%;
-    .search_container{
-      box-sizing: border-box;
-      position: relative;
-      border: 1px solid #999;
-      display: block;
-      padding: 3px 10px;
-      margin: 0 auto;
-      border-radius: 20px;
-      height: 40px;
-      width: 90%;
-      overflow: hidden;
-    }
-    .search_container input[type="text"]{
-      border: none;
-      height: 30px;
-    }
-    .search_container input[type="text"]:focus {
-      outline: 0;
-    }
-    .search_container button[type="submit"]{
-      cursor: pointer;
-      border: none;
-      background: #3879D9;
-      color: #fff;
-      position: absolute;
-      width: 50px;
-      height: 45px;
-      right:0px;
-      top: -3px;
-      outline : none;
-    }
+}
+.search {
+  height: 60px;
+  width: 100%;
+  &__container {
+    box-sizing: border-box;
+    position: relative;
+    border: 1px solid #999;
+    display: block;
+    padding: 3px 10px;
+    margin: 0 auto;
+    border-radius: 20px;
+    height: 40px;
+    width: 90%;
+    overflow: hidden;
+  }
+  .search_container input[type="text"]{
+    border: none;
+    height: 30px;
+  }
+  .search_container input[type="text"]:focus {
+    outline: 0;
+  }
+  .search_container button[type="submit"]{
+    cursor: pointer;
+    border: none;
+    background: #3879D9;
+    color: #fff;
+    position: absolute;
+    width: 50px;
+    height: 45px;
+    right:0px;
+    top: -3px;
+    outline : none;
   }
 }
 
@@ -90,6 +90,7 @@
     &__msg {
       color: white;
       text-shadow: 0 0 5px rgba(0,0,0,0.4);
+      font-family: arial unicode ms;
       &__ttl {
         font-size: 60px;
       }
