--- a/app/views/shops/_header.html.haml
+++ b/app/views/shops/_header.html.haml
@@ -12,8 +12,8 @@
               = link_to "ログイン"
             %li 
               = link_to "新規登録"
-    .header__search
-      %form.search_container{:action => "#", :method => "get"}
-        %input{:placeholder => "キーワード検索", :size => "25", :type => "text"}
-        %button{:type => "submit"}
-          %i.fas.fa-search
+.search
+  %form.search__container{:action => "#", :method => "get"}
+    %input{:placeholder => "キーワード検索", :size => "25", :type => "text"}
+    %button{:type => "submit"}
+      %i.fas.fa-search
