--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -8,7 +8,10 @@
       .header__upper__nav__right
         %ul
           - if owner_signed_in?
-            %li オーナー
+            %li
+              オーナー 
+              = current_owner.name
+              さん
             %li= link_to "ログアウト", destroy_owner_session_path, method: :delete
           - else
             %li ゲストユーザー
