Add style to owners views & Add validation to owners model

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,7 +1,7 @@
 .header
   .header__upper
     .header__upper__title
-      = link_to Cafelog 
+      = link_to Cafelog, root_path
     .header__upper__nav
       .header__upper__nav__left
         = link_to "カテゴリ"
