--- a/app/views/owners/registrations/new.html.haml
+++ b/app/views/owners/registrations/new.html.haml
@@ -1,25 +1,32 @@
-%h2 Sign up
-= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-  = render "owners/shared/error_messages", resource: resource
-  .field
-    = f.label :name
-    %br/
-    = f.text_field :name, autofocus: true, autocomplete: "name"
-  .field
-    = f.label :email
-    %br/
-    = f.email_field :email, autofocus: true, autocomplete: "email"
-  .field
-    = f.label :password
-    - if @minimum_password_length
-      %em
-        (#{@minimum_password_length} characters minimum)
-    %br/
-    = f.password_field :password, autocomplete: "new-password"
-  .field
-    = f.label :password_confirmation
-    %br/
-    = f.password_field :password_confirmation, autocomplete: "new-password"
-  .actions
-    = f.submit "Sign up"
-= render "owners/shared/links"
+= render 'layouts/header'
+
+.form
+  .form__container
+    .form__container__title
+      新規登録
+    = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+      = render "owners/shared/error_messages", resource: resource
+      .new-content
+        = f.label :name, 'なまえ', class: "new-content__title"
+        %br/
+        = f.text_field :name, autofocus: true, autocomplete: "name", class: "new-content__form"
+      .new-content
+        = f.label :email, 'メールアドレス', class: "new-content__title"
+        %br/
+        = f.email_field :email, autofocus: true, autocomplete: "email", class: "new-content__form"
+      .new-content
+        = f.label :password, 'パスワード', class: "new-content__title"
+        - if @minimum_password_length
+          %em
+            (#{@minimum_password_length}文字以上)
+        %br/
+        = f.password_field :password, autocomplete: "new-password", class: "new-content__form"
+      .new-content
+        = f.label :password_confirmation, 'パスワード(確認用)', class: "new-content__title"
+        %br/
+        = f.password_field :password_confirmation, autocomplete: "new-password", class: "new-content__form"
+      .new-content
+        = f.submit "登録", class: "submit-btn"
+    = render "owners/shared/links"
+
+= render 'layouts/footer'
