--- a/app/views/owners/shops/new.html.haml
+++ b/app/views/owners/shops/new.html.haml
@@ -5,34 +5,28 @@
     .form__container__title
       お店を登録
     =form_with(model: @shop, local: true, url: owners_shops_path(@shop)) do |f|
+      = render 'layouts/error_messages', model: f.object
       .new-content
         = f.label :name, '店名', class: "new-content__title"
-        %br/
         = f.text_field :name, class: "new-content__form"
       .new-content
         = f.label :postal_code, '郵便番号', class: "new-content__title"
-        %br/
         = f.text_field :postal_code, class: "new-content__form"
       .new-content
         = f.label :prefecture, '都道府県', class: "new-content__title"
-        %br/
         -# = f.text_field :prefecture, class: "new-content__form"
         = f.select :prefecture, Shop.prefectures.keys, { include_blank: '選択してください'}, { class: "new-content__form"}
       .new-content
         = f.label :city, '市町村', class: "new-content__title"
-        %br/
         = f.text_field :city, class: "new-content__form"
       .new-content
         = f.label :house_number, '番地', class: "new-content__title"
-        %br/
         = f.text_field :house_number, class: "new-content__form"
       .new-content
         = f.label :building_name, '建物名', class: "new-content__title"
-        %br/
         = f.text_field :building_name, class: "new-content__form"
       .new-content
         = f.label :phone_number, '電話番号', class: "new-content__title"
-        %br/
         = f.text_field :phone_number, class: "new-content__form"
       .new-content
         = f.submit "お店を公開する", class: "submit-btn"
