Create user model by devise

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -17,7 +17,7 @@
         Cafelog
       .main__img__msg__txt
         %br/
-        休憩・勉強・仕事・女子会
+        休憩･勉強･仕事･女子会
         %br
         最高のひとときを
   .main__feature
