Update style shops index

--- a/app/assets/stylesheets/shops.scss
+++ b/app/assets/stylesheets/shops.scss
@@ -125,6 +125,7 @@
                 top: calc(50%-40px);
                 .name {
                   font-size: 25px;
+                  font-weight: bold;
                 }
                 .address {
                   font-size: 15px;
