--- a/app/views/shops/index.html.haml
+++ b/app/views/shops/index.html.haml
@@ -27,7 +27,7 @@
   .main__shop-list
     .shop-container
       .shop-container__title
-        %h2 ショップ一覧
+        %h2 Cafe一覧
       %ul.shop-container__lists
         - @shops.each do |shop|
           %li.shop-container__lists.shop
