--- a/app/assets/stylesheets/modules/_header.scss
+++ b/app/assets/stylesheets/modules/_header.scss
@@ -14,7 +14,7 @@
       justify-content: center;
       align-items: center;
       a {
-        color: darkgray;
+        color: rgba(12, 18, 28, 0.6);
         text-decoration: none;
       }
     }
@@ -24,13 +24,25 @@
       align-items: center;
       display: flex;
       justify-content: space-between;
-      a {
-        color: black;
-        text-decoration: none;
-      }
+      color:rgba(12, 18, 28, 0.6);
+      text-decoration: none;
       &__right li{
+        font-weight: 700;
         float: left;;
         margin-left: 20px;
+      }
+      .btn {
+        text-decoration: none;
+        color: rgba(12, 18, 28, 0.6);
+        border-radius: 25px;
+        cursor: pointer;
+        border: 1px solid rgba(12, 18, 28, 0.6);
+        padding: 10px;
+        background-color: rgb(239, 239, 239);
+        transition: all .15s ease;
+      }
+      &__right .btn:hover {
+        background: #FF9900;
       }
     }
   }
