--- a/app/assets/stylesheets/shops.scss
+++ b/app/assets/stylesheets/shops.scss
@@ -79,7 +79,7 @@
       padding: 10px 0;
       &__title {
         color: gray;
-        font-family:  arial unicode ms;
+        font-family: arial unicode ms;
         text-shadow: 0 0 10px rgba(0,0,0,0.4);
         font-size: 30px;
         text-align: center;
@@ -208,6 +208,101 @@
         .btn:hover {
           background-color: #f56500;
         }
+      }
+    }
+  }
+}
+
+// shops/showページ
+
+.shop {
+  width: 920px;
+  margin: 0 auto;
+  &__container {
+    height: auto;
+    background-color: rgba(0,0,0,0.4);
+    border: 0 solid rgba(0,0,0,0.4);
+    border-radius: 10px;
+    background: #fff;
+    box-shadow: 0 1px 4px;
+    margin: 0 0 15px 0;
+    padding: 10px;
+    &__contents {
+
+      &__name {
+        height: 100px;
+        border-bottom: 1px solid lightgrey;
+        padding-left: 20px;
+        font-family: arial unicode ms;
+        font-size: 40px;
+        font-weight: bold;
+        line-height: 100px;
+        color: rgba(12, 18, 28, 0.6);
+      }
+      &__info {
+        padding: 20px;
+        display: flex;
+        justify-content: space-between;
+        &__address {
+          font-family: arial unicode ms;
+          font-size: 20px;
+        }
+        &__phone-num {
+          font-family: arial unicode ms;
+          font-size: 30px;
+          border: 1px solid lightgray;
+          border-radius: 25px;
+          padding: 5px 15px;
+        }
+        &__tags {
+          padding-left: 20px;
+          color: orange;
+          font-size: 20px;
+          
+        }
+      }
+    }
+    &__contents {
+      &__map {
+        height: 480px;
+        border-bottom: 1px solid lightgrey;
+        &__ttl {
+          font-family: arial unicode ms;
+          font-size: 30px;
+          font-weight: bold;
+          color: rgba(12, 18, 28, 0.6);
+        }
+        &__field {
+          background-color: lightseagreen;
+          height: 400px;
+          width: 100%;
+          margin: 10px auto;
+        }
+      }
+      &__images {
+        &__ttl {
+          font-family: arial unicode ms;
+          font-size: 30px;
+          font-weight: bold;
+          padding-top: 10px;
+          color: rgba(12, 18, 28, 0.6);
+        }
+        &__field {
+          width: 100%;
+          height: 440px;
+          margin: 10px auto;
+          background-color: lightskyblue;
+        }
+      }
+    }
+    &__comments {
+      height: 100px;
+      padding: 10px;
+      &__ttl {
+        font-family: arial unicode ms;
+        font-size: 30px;
+        font-weight: bold;
+        color: rgba(12, 18, 28, 0.6);
       }
     }
   }
