Create update action

--- a/app/assets/stylesheets/modules/_header.scss
+++ b/app/assets/stylesheets/modules/_header.scss
@@ -36,7 +36,7 @@
         color: rgba(12, 18, 28, 0.6);
         border-radius: 25px;
         cursor: pointer;
-        border: 1px solid rgba(12, 18, 28, 0.6);
+        border: 1px solid lightgray;
         padding: 10px;
         background-color: rgb(239, 239, 239);
         transition: all .15s ease;
