--- a/app/assets/stylesheets/shops.scss
+++ b/app/assets/stylesheets/shops.scss
@@ -88,9 +88,9 @@
         margin-top: 10px;
         .shop {
           width: 750px;
-          height: 240px;
+          height: 260px;
           margin: 0 auto;
-          padding: 10px;
+          padding: 20px;
           border-top: 1px solid lightgray;
           display: flex;
           &__image {
@@ -219,6 +219,7 @@
   width: 920px;
   margin: 0 auto;
   &__container {
+    width: 100%;
     height: auto;
     background-color: rgba(0,0,0,0.4);
     border: 0 solid rgba(0,0,0,0.4);
@@ -227,38 +228,47 @@
     box-shadow: 0 1px 4px;
     margin: 0 0 15px 0;
     padding: 10px;
-    &__contents {
-
-      &__name {
-        height: 100px;
-        border-bottom: 1px solid lightgrey;
-        padding-left: 20px;
-        font-family: arial unicode ms;
-        font-size: 40px;
-        font-weight: bold;
-        line-height: 100px;
-        color: rgba(12, 18, 28, 0.6);
+    .main {
+      display: flex;
+      justify-content: space-between;
+      &__image {
+        height: 250px;
+        width: 250px;
+        background-color: orangered;
       }
-      &__info {
-        padding: 20px;
-        display: flex;
-        justify-content: space-between;
-        &__address {
+      &__contents {
+        width: 650px;
+        &__name {
+          height: 100px;
+          border-bottom: 1px solid lightgrey;
           font-family: arial unicode ms;
-          font-size: 20px;
+          margin-left: 10px;
+          padding-left: 20px;
+          font-size: 40px;
+          font-weight: bold;
+          line-height: 100px;
+          color: rgba(12, 18, 28, 0.6);
         }
-        &__phone-num {
-          font-family: arial unicode ms;
-          font-size: 30px;
-          border: 1px solid lightgray;
-          border-radius: 25px;
-          padding: 5px 15px;
+        &__info {
+          padding: 20px;
+          display: flex;
+          justify-content: space-between;
+          &__address {
+            font-family: arial unicode ms;
+            font-size: 20px;
+          }
+          &__phone {
+            font-family: arial unicode ms;
+            font-size: 30px;
+            border: 1px solid lightgray;
+            border-radius: 25px;
+            padding: 5px 15px;
+          }
         }
         &__tags {
-          padding-left: 20px;
+          padding: 20px;
           color: orange;
           font-size: 20px;
-          
         }
       }
     }
