--- a/app/views/owners/shops/index.html.haml
+++ b/app/views/owners/shops/index.html.haml
@@ -1,40 +1,82 @@
-- provide(:title, "ショップ一覧")
+- provide(:title, "Top")
 
 = render 'layouts/header'
 
-.shop-list
-  .shop-container
-    .shop-container__title
-      %h2 Cafe一覧
-    %ul.shop-container__lists
-      - @shops.each do |shop|
-        %li.shop-container__lists.shop
-          .shop__image
-            .shop__image__main
-              main image
-            %ul.shop__image__sub
-              %li.shop__image__sub__small
-                sub image
-              %li.shop__image__sub__small
-                sub image
-              %li.shop__image__sub__small
-                sub image
-          .shop__info
-            .shop__info__ttl
-              .shop__info__ttl__inner
-                .name= link_to(shop.name, '#')
-                .address= "#{shop.prefecture}#{shop.city}"
-            .shop__info__tags
-              %ul.tags
-                %li= "#女子会"
-                %li= "#女子会"
-                %li= "#女子会"
-            .shop__info__comments
-              %ul.comments
-                %li.comment
-                  .comment__user
-                    by りょた
-                  .comment__text
-                    美味しい
+.search
+  %form.search__container{:action => "#", :method => "get"}
+    %input{:placeholder => "キーワード検索", :size => "25", :type => "text"}
+    %button{:type => "submit"}
+      %i.fas.fa-search
+
+.main
+  .main__img
+    .main__img__msg
+      .main__img__msg__ttl
+        あなたのカフェ選びなら
+        %br/
+        Cafelog
+      .main__img__msg__txt
+        %br/
+        休憩･勉強･仕事･女子会
+        %br
+        最高のひとときを
+  .main__feature
+    用途ジャンルから探す
+    %br/
+    Tagsテーブルからタグ一覧を作成
+  .main__shop-list
+    .shop-container
+      .shop-container__title
+        %h2 Cafe一覧
+      %ul.shop-container__lists
+        - @shops.each do |shop|
+          %li.shop-container__lists.shop
+            .shop__image
+              .shop__image__main
+                main image
+              %ul.shop__image__sub
+                %li.shop__image__sub__small
+                  sub image
+                %li.shop__image__sub__small
+                  sub image
+                %li.shop__image__sub__small
+                  sub image
+            .shop__info
+              .shop__info__ttl
+                .shop__info__ttl__inner
+                  = link_to shop_path(shop) do
+                    .name= "#{shop.name}"
+                  .address= "#{shop.prefecture}#{shop.city}"
+              .shop__info__tags
+                %ul.tags
+                  %li= "#女子会"
+                  %li= "#女子会"
+                  %li= "#女子会"
+              .shop__info__comments
+                %ul.comments
+                  %li.comment
+                    .comment__user
+                      by りょた
+                    .comment__text
+                      美味しい
+  .app-banner
+    .app-banner__inner
+      - if user_signed_in?
+        .app-banner__inner__txt
+          今すぐカフェを探す
+        .app-banner__inner__btn
+          = link_to "キーワードから検索", "#", class: "btn"
+          = link_to "タグから検索", "#", class: "btn"
+      - elsif owner_signed_in?
+        .app-banner__inner__txt
+          今すぐカフェをオープン
+        .app-banner__inner__btn
+          = link_to "カフェを登録", new_owners_shop_path, class: "btn new-shop_btn"
+      -else
+        .app-banner__inner__txt
+          カフェオーナー登録してお店をオープン
+        .app-banner__inner__btn
+          = link_to "オーナー新規登録", new_owner_registration_path, class: "btn sign-in_btn"
+          = link_to "オーナーログイン", new_owner_session_path, class: "btn login_btn"
 
 = render 'layouts/footer'
