--- a/app/views/owners/shops/show.html.haml
+++ b/app/views/owners/shops/show.html.haml
@@ -8,7 +8,11 @@
       .main__image
       .main__contents
         .main__contents__name
-          = @shop.name
+          - if owner_signed_in? && current_owner.id == @shop.owner_id
+            = @shop.name
+            = link_to "編集", edit_owners_shop_path(@shop), class: "main__contents__name__edit-btn"
+          - else
+            = @shop.name
         .main__contents__info
           .main__contents__info__address
             = "#{@shop.city}#{@shop.house_number} #{@shop.building_name}"
@@ -30,3 +34,7 @@
     .shop__container__comments
       .shop__container__comments__ttl
         Comments
+
+= render 'layouts/app-banner'
+
+= render 'layouts/footer'
