--- a/app/views/shops/index.html.haml
+++ b/app/views/shops/index.html.haml
@@ -59,24 +59,6 @@
                       by りょた
                     .comment__text
                       美味しい
-  .app-banner
-    .app-banner__inner
-      - if user_signed_in?
-        .app-banner__inner__txt
-          今すぐカフェを探す
-        .app-banner__inner__btn
-          = link_to "キーワードから検索", "#", class: "btn"
-          = link_to "タグから検索", "#", class: "btn"
-      - elsif owner_signed_in?
-        .app-banner__inner__txt
-          今すぐカフェをオープン
-        .app-banner__inner__btn
-          = link_to "カフェを登録", new_owners_shop_path, class: "btn new-shop_btn"
-      -else
-        .app-banner__inner__txt
-          カフェオーナー登録してお店をオープン
-        .app-banner__inner__btn
-          = link_to "オーナー新規登録", new_owner_registration_path, class: "btn sign-in_btn"
-          = link_to "オーナーログイン", new_owner_session_path, class: "btn login_btn"
+= render 'layouts/app-banner'
 
 = render 'layouts/footer'
