--- a/app/views/users/registrations/new.html.haml
+++ b/app/views/users/registrations/new.html.haml
@@ -24,5 +24,7 @@
       .new-content
         = f.submit "登録", class: "submit-btn"
     = render "users/shared/links"
+    
+= render 'layouts/app-banner'
 
 = render 'layouts/footer'
