--- a/app/views/owners/shops/new.html.haml
+++ b/app/views/owners/shops/new.html.haml
@@ -28,6 +28,10 @@
         = f.label :phone_number, '電話番号', class: "new-content__title"
         = f.text_field :phone_number, class: "new-content__form"
       .new-content
+        = f.fields_for :images do |i|
+          = i.file_field :image_url
+
+      .new-content
         = f.submit "お店を公開する", class: "submit-btn"
 
 = render 'layouts/footer'
