--- a/app/views/owners/shops/new.html.haml
+++ b/app/views/owners/shops/new.html.haml
@@ -14,7 +14,7 @@
         = f.text_field :postal_code, class: "new-content__form"
       .new-content
         = f.label :prefecture, '都道府県', class: "new-content__title"
-        = f.select :prefecture, Shop.prefectures.keys, { include_blank: '選択してください'}, { class: "new-content__form"}
+        = f.select :prefecture, Shop.prefectures.keys, { include_blank: "選択してください", selected: 0 }, { class: "new-content__form"}
       .new-content
         = f.label :city, '市町村', class: "new-content__title"
         = f.text_field :city, class: "new-content__form"
